@@ -5,7 +5,7 @@ sdcclib -l small\libint.lib libint.lib
 sdcclib -l small\liblong.lib liblong.lib
 sdcclib -l small\libsdcc.lib libsdcc.lib
 cd mcs51
-@for %%I in (*.asm) do asx8051 -plosgff %%I
+@for %%I in (*.asm) do sdas8051 -plosgff %%I
 @for %%I in (*.rel) do sdcclib ..\small\mcs51.lib %%I
 cd..
 del *.rel *.sym *.asm *.lst *.adb
@@ -17,7 +17,7 @@ sdcclib -l medium\libint.lib libint.lib
 sdcclib -l medium\liblong.lib liblong.lib
 sdcclib -l medium\libsdcc.lib libsdcc.lib
 cd mcs51
-@for %%I in (*.asm) do asx8051 -plosgff %%I
+@for %%I in (*.asm) do sdas8051 -plosgff %%I
 @for %%I in (*.rel) do sdcclib ..\medium\mcs51.lib %%I
 cd..
 del *.rel *.sym *.asm *.lst *.adb
@@ -29,7 +29,7 @@ sdcclib -l large\libint.lib libint.lib
 sdcclib -l large\liblong.lib liblong.lib
 sdcclib -l large\libsdcc.lib libsdcc.lib
 cd mcs51
-@for %%I in (*.asm) do asx8051 -plosgff %%I
+@for %%I in (*.asm) do sdas8051 -plosgff %%I
 @for %%I in (*.rel) do sdcclib ..\large\mcs51.lib %%I
 cd..
 del *.rel *.sym *.asm *.lst *.adb
